compile.log
/main.cpp: In function ‘int main()’:
/main.cpp:129:34: error: ‘string’ was not declared in this scope
                 command=command+(string) i;
                                  ^~~~~~
/main.cpp:129:34: note: suggested alternative:
In file included from /usr/include/c++/8/string:39,
                 from /usr/include/c++/8/stdexcept:39,
                 from /usr/include/c++/8/array:39,
                 from /main.cpp:1:
/usr/include/c++/8/bits/stringfwd.h:74:33: note:   ‘std::__cxx11::string’
   typedef basic_string<char>    string;
                                 ^~~~~~